add ClubeServiceTest TESTS